--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/chattrix-logo-icon.png" />
+  <link rel="icon" type="image/png" href="/chattrix-logo-icon-removebg-preview.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chattrix</title>
+  <title>chattrix</title>
 </head>
 <body>
   <div id="root"></div>
